Project

General

Profile

Actions

Bug #15629

closed

super_method fails on binded/unbinded/cloned methods

Bug #15629: super_method fails on binded/unbinded/cloned methods

Added by wanabe (_ wanabe) over 7 years ago. Updated almost 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:91649]

Description

derived from #13973:

module A
  def foo
  end
end

module B
  def foo
  end
end

class C
  include A
  include B
end

c = C.new
m1 = c.method(:foo)
p m1.super_method         # => #<Method: A#foo>
p m1.clone.super_method   # => nil
p m1.unbind.super_method  # => nil

m2 = C.instance_method(:foo)
p m2.super_method         # => #<UnboundMethod: A#foo>
p m2.clone.super_method   # => nil
p m2.bind(c).super_method # => nil

super_method of binded/unbinded/cloned method should be super_method of original method, shouldn't it?


Files

super_method-bind-unbind-clone-15629.patch (4.85 KB) super_method-bind-unbind-clone-15629.patch jeremyevans0 (Jeremy Evans), 10/02/2019 10:23 PM

Related issues 1 (0 open1 closed)

Related to Ruby - Bug #13973: super_method fails on some UnboundMethodsClosednobu (Nobuyoshi Nakada)Actions
Actions

Also available in: PDF Atom