Make {Method,UnboundMethod}#super_method handle clone/bind/unbind

This wasn't working previously because the iclass entry wasn't
being copied, and without an iclass entry, super_method returns
nil.

Fixes [Bug #15629]